# ARISE

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEMO.md  PRESENTATION_SLIDES.md  PROJECT_OVERVIEW.md  README.md  cd Documents AdoVs ai.txt  project_context.md
arise/: CMakeLists.txt  PHASES.md
arise/blackboard/: blackboard.cpp  blackboard.hpp
arise/cli/: arise_cli.cpp
arise/cortex/: adapter_registry.cpp  adapter_registry.hpp  coder.cpp  coder.hpp  critic.cpp  critic.hpp  curator.cpp  curator.hpp  device_store.cpp  device_store.hpp  federation_router.cpp  federation_router.hpp  feedback_db.cpp  feedback_db.hpp  forge_tool.cpp  forge_tool.hpp  goal_scheduler.cpp  goal_scheduler.hpp  goals.cpp  goals.hpp  identity.cpp  identity.hpp  memory_cortex.cpp  memory_cortex.hpp  orchestrator.cpp  orchestrator.hpp  persona_prompt.cpp  persona_prompt.hpp  piper_engine.cpp  piper_engine.hpp  privacy_filter.cpp  privacy_filter.hpp  proactive.cpp  proactive.hpp  researcher.cpp  researcher.hpp  salience.cpp  salience.hpp  sandbox.cpp  sandbox.hpp  (+18 more)
arise/perception/: audio_scene.cpp  audio_scene.hpp  mic_capture.cpp  mic_capture.hpp  perception.cpp  perception.hpp  phash.cpp  phash.hpp  privacy_gate.cpp  privacy_gate.hpp  system_snapshot.cpp  system_snapshot.hpp
arise/tests/: test_blackboard.cpp  test_goal_scheduler.cpp  test_goals.cpp  test_memory_cortex.cpp  test_perception.cpp  test_phase2_commit2.cpp  test_phase4_commit1.cpp  test_phase4_commit2.cpp  test_phase5_commit1.cpp  test_phase5_commit2.cpp  test_phase6_commit1.cpp  test_phase7_commit1.cpp  test_phase8_commit1.cpp
arise/util/: embedding_client.cpp  embedding_client.hpp  log.cpp  log.hpp  paths.cpp  paths.hpp  vision_client.cpp  vision_client.hpp
src/: config.cpp  config.hpp  context.cpp  context.hpp  daemon.cpp  daemon.hpp  executor.cpp  executor.hpp  intent.cpp  intent.hpp  llm.cpp  llm.hpp  logger.cpp  logger.hpp  main.cpp  memory.cpp  memory.hpp  planner.cpp  planner.hpp  recorder.cpp  recorder.hpp  screen.cpp  screen.hpp  timer.cpp  timer.hpp  transcriber.cpp  transcriber.hpp  tts.cpp  tts.hpp  vision.cpp  vision.hpp  wakeword.cpp  wakeword.hpp
training/: aria_dataset.jsonl  finetune.py
